fix: ajuster l'alignement du bouton UI en remplaçant float par margin auto

--- a/src/index.css
+++ b/src/index.css
@@ -141,7 +141,7 @@ progress {
 }
 
 .btn-ui {
-  float: right;
+  margin: auto;
 }
 
 .options {
